# grass

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/grass_app/: Cargo.toml  README.md
crates/grass_app/examples/: hello_app.rs
crates/grass_app/src/: app.rs  lib.rs  plugin.rs  setup.rs  sub_app.rs
crates/grass_derive/: Cargo.toml  README.md
crates/grass_derive/src/: lib.rs
crates/grass_io/: Cargo.toml  README.md
crates/grass_io/examples/: observed_oscillator.rs
crates/grass_io/src/: clock.rs  config.rs  dump.rs  lib.rs  run.rs  term_out.rs
crates/grass_mpi/: Cargo.toml  README.md
crates/grass_mpi/src/: lib.rs
crates/grass_multi/: Cargo.toml  README.md
crates/grass_multi/src/: lib.rs  multi.rs  outer_iter.rs  physics.rs  remote.rs  snapshot.rs  transport.rs  typed_multi.rs  wire.rs
crates/grass_multi/tests/: multi_phase0.rs  multi_phase2.rs  multi_phase3.rs
crates/grass_precice/: Cargo.toml  README.md
crates/grass_precice/src/: lib.rs  participant.rs  plugin.rs  schedule.rs
crates/grass_precice/tests/: ping_pong.rs  stub.rs
crates/grass_precice/tests/fixtures/: ping_pong.xml
crates/grass_scheduler/: Cargo.toml  README.md
crates/grass_scheduler/examples/: verlet_minisolver.rs
crates/grass_scheduler/src/: coherence.rs  lib.rs  schedule.rs  snapshot.rs
crates/grass_scheduler/tests/: schedule.rs  snapshot.rs
crates/oscillator_demo/: Cargo.toml  README.md
crates/oscillator_demo/src/: lib.rs
docs/: book.toml
docs/_planning/: grass_app.md  grass_derive.md  grass_io.md  grass_mpi.md  grass_multi.md  grass_scheduler.md
docs/src/: SUMMARY.md  introduction.md
docs/src/model/: app-plugin.md  io.md  mpi-coupling.md  scheduler.md
docs/src/reference/: crates.md  derives.md
docs/src/tutorial/: write-your-own-solver.md
examples/coupling/: README.md
examples/coupling/adaptive/: main.rs  main.toml
examples/coupling/explicit/: main.rs  main.toml
examples/coupling/explicit_mpi/: a.rs  b.rs  main.toml
examples/coupling/implicit/: main.rs  main.toml
examples/coupling/single_oscillator/: main.rs  main.toml
examples/io/: main.rs  main.toml
examples/io_coupled/: main.rs  main.toml
