[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/elizabeth-suehr/grass"

[workspace.dependencies]
# Inter-crate paths so cargo resolves them inside this workspace.
grass_scheduler = { path = "crates/grass_scheduler", version = "0.1.0" }
grass_app       = { path = "crates/grass_app",       version = "0.1.0" }
grass_io        = { path = "crates/grass_io",        version = "0.1.0" }
grass_mpi       = { path = "crates/grass_mpi",       version = "0.1.0", default-features = false }
grass_derive    = { path = "crates/grass_derive",    version = "0.1.0" }
grass_multi     = { path = "crates/grass_multi",     version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
