[package]
name = "grass_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "App, SubApp, Plugin, and PluginGroup abstractions for the grass simulation framework"
keywords = ["plugin", "app", "simulation"]
categories = ["simulation"]

[dependencies]
grass_scheduler = { workspace = true }
downcast-rs = "1.2.0"
