[package]
name = "grass_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macros for the grass simulation framework: #[derive(ScheduleSet)] and #[derive(StageEnum)]"
keywords = ["derive", "macro", "scheduler", "simulation"]
categories = ["simulation"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
