[package]
name = "grass_mpi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure MPI abstraction: CommBackend trait, CommResource wrapper, SingleProcessComm and MpiCommBackend backends"
keywords = ["mpi", "communication", "simulation"]
categories = ["simulation", "science"]

[features]
default = ["mpi_backend"]
mpi_backend = ["dep:mpi", "dep:libffi-sys"]

[dependencies]
mpi = { version = "0.8.0", features = ["user-operations", "derive"], optional = true }
libffi-sys = { version = "2.3.0", features = ["system"], optional = true }
