[package]
name = "oscillator_demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared coupled-oscillator physics for the GRASS example pairs"

[dependencies]
grass_app       = { workspace = true }
grass_io        = { workspace = true }
grass_multi     = { workspace = true }
grass_scheduler = { workspace = true }
serde           = { version = "1", features = ["derive"] }
